package Payment;

public interface PaymentMethod {
    boolean pay(double amount);
}