package Slot;

public interface SlotDecorator {
    String getDescription();
}
